fix: correção de alguns detalhes no dark mode

--- a/src/component/Services.css
+++ b/src/component/Services.css
@@ -29,3 +29,9 @@
 #services {
   overflow: hidden;
 }
+
+@media (min-width: 640px) {
+  .center-border-line {
+    left: 50%;
+  }
+}
